Login, Signup view 추가

--- a/package.json
+++ b/package.json
@@ -1,12 +1,39 @@
 {
-  "name": "@zen-ui",
+  "name": "@zen/ui",
   "version": "0.1.0",
-  "dependencies": {
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "peerDependencies": {
+    "@material-ui/core": ">=4.9.5",
+    "@material-ui/icons": ">=4.9.1",
+    "@material-ui/lab": ">=4.0.0-alpha.45",
+    "@material-ui/pickers": ">=3.2.10",
+    "@material-ui/styles": ">=4.9.0",
+    "echarts": ">=4.6.0",
+    "echarts-for-react": ">=2.0.15-beta.1",
+    "react": ">=16.13.0",
+    "react-dom": ">=16.13.0",
+    "react-router": ">=5.1.2",
+    "react-router-dom": ">=5.1.2",
+    "react-hook-form": ">=5.1.3",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3"
+  },
+  "devDependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.0",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-info": "^5.3.17",
+    "@storybook/addon-knobs": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/preset-create-react-app": "^2.0.0",
+    "@storybook/preset-typescript": "^2.1.0",
+    "@storybook/react": "^5.3.17",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -16,38 +43,39 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/storybook-react-router": "^1.0.1",
+    "@wessberg/rollup-plugin-ts": "^1.2.21",
     "echarts": "^4.6.0",
     "echarts-for-react": "^2.0.15-beta.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "storybook-addon-material-ui": "^0.9.0-alpha.21",
-    "storybook-react-router": "^1.0.8",
-    "typescript": "^3.7.5"
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-info": "^5.3.17",
-    "@storybook/addon-knobs": "^5.3.17",
-    "@storybook/addon-links": "^5.3.17",
-    "@storybook/addons": "^5.3.17",
-    "@storybook/preset-create-react-app": "^2.0.0",
-    "@storybook/preset-typescript": "^2.1.0",
-    "@storybook/react": "^5.3.17",
-    "@types/storybook-react-router": "^1.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-config-react": "^1.1.7",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.18.3",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
+    "react": "^16.13.0",
     "react-docgen-typescript-loader": "^3.7.1",
-    "ts-loader": "^6.2.1"
+    "react-dom": "^16.13.0",
+    "react-hook-form": "^5.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
+    "rollup": "^2.1.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-multi-input": "^1.1.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-typescript2": "^0.26.0",
+    "storybook-addon-material-ui": "^0.9.0-alpha.21",
+    "storybook-react-router": "^1.0.8",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009",
@@ -67,5 +95,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "dependencies": {}
 }
