--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.18.3",
+    "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-docgen-typescript-loader": "^3.7.1",
