--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": ">=5.1.2",
     "react-router-dom": ">=5.1.2",
     "react-hook-form": ">=5.1.3",
+    "lodash": "^4.17.15",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3"
@@ -79,7 +80,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009",
+    "storybook": "start-storybook -s ./public -p 9009",
     "build-storybook": "build-storybook"
   },
   "eslintConfig": {
