--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material-ui/styles": "^4.9.0",
     "@rollup/plugin-multi-entry": "^3.0.0",
     "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-docs": "^5.3.17",
     "@storybook/addon-info": "^5.3.17",
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
